# mandelbrot_viewer

./: .gitignore  CMakeLists.txt  README.md
src/: color_palettes.cpp  color_palettes.hpp  main.cpp  mandelbrot.cpp  mandelbrot.hpp  view_state.hpp
